# SP-calibration-NER

./: .gitignore  README.md  TF1_requirements.txt  pyproject.toml  setup.cfg
NFETC/: README.md  config.py  eval.py  predict.py  preprocess.py  task.py
NFETC/utils/: embedding_utils.py  pkl_utils.py
Partially-Observed-TreeCRFs-main/: show_tree_example.py  tree_crf_test.py
acl2019_nested_ner/: README.md  bio2bilou.py
conformal-calibration/: conformal_predictor.py  example_conformal_prediction.py  plot_digits_classification.py
dev_utils/: conll_to_embeddings.py  evaluator.py
dev_utils/extract_bert_features/: extract_bert_features.sh
nested-ner-tacl2020/: DEV.md  ace2conll.py  config.py  gen_data_for_genia.py  parse_ace2004.py  parse_genia.py  test.py
nested-ner-tacl2020-transformers/: config.py
nested-ner-tacl2020-transformers/model/: sequence_labeling.py
nested-ner-tacl2020/model/: sequence_labeling.py
nested-ner-tacl2020/statnlp-mentionextraction.v0.2/: README.txt  sources.txt
nested-ner-tacl2020/statnlp-mentionextraction.v0.2/src/com/statnlp/ie/mention/core/: IELinearBuilder.java  IELinearBuilder_CONLL2003.java  IELinearConfig.java  IELinearFeatureManager.java  IELinearFeatureManager_CONLL2003.java  IELinearHeadBuilder.java  IELinearHeadConfig.java  IELinearHeadFeatureManager.java  IELinearHeadInstance.java  IELinearHeadModel.java  IELinearHeadNetwork.java  IELinearInstance.java  IELinearModel.java  IELinearModel_CONLL2003.java  IELinearNetwork.java  IELinearNetwork_CONLL2003.java
nested-ner-tacl2020/statnlp-mentionextraction.v0.2/src/com/statnlp/ie/mention/main/: MentionEvaluator.java  MentionExtractor.java  MentionHeadExtractor.java  (+5 more)
nested-ner-tacl2020/statnlp-mentionextraction.v0.2/src/com/statnlp/ie/types/: Event.java  EventRole.java  EventTemplate.java  IEConfig.java  IEManager.java  LabeledTextSpan.java  Mention.java  MentionTemplate.java  MentionType.java  Segment.java  SemanticTag.java  SemanticTagList.java  TaggedSegment.java  UnlabeledTextSpan.java
nested-ner-tacl2020/statnlp-mentionextraction.v0.2/src/com/statnlp/learn/core/: Attribute.java  AttributedWord.java  BitextInstance.java  Corpus.java  FeatureArray.java  FeatureManager.java  Forest.java  HCorpus.java  HGrammar.java  HGrammarReader.java  HInstance.java  HNode.java  HPattern.java  HRule.java  Identifiable.java  IndexedHashMap.java  Instance.java  LBFGS.java  LBFGSOptimizer.java  LBFGSOptimizer2.java  LinkedArrayList.java  MathsVector.java  Mcsrch.java  Network.java  NetworkBuilder.java  NetworkConfig.java  NetworkDecoder.java  NetworkException.java  NetworkIDMapper.java  NetworkParam.java  NetworkParam_LV.java  Orientation.java  PForest.java  POSTag.java  Pattern.java  Sentence.java  SequencePair.java  SharedFasterTableLookupNetwork.java  StringUtil.java  TableLookupNetwork.java  (+8 more)
utils/: conll_to_embeddings.py
