[tool.poetry]
name = "SP-calibration-NER"
version = "0.1.0"
description = "experiments for reproducing nested NER"
authors = ["jordy <jordy@contract.fit>"]

readme = 'README.md'  # Markdown files are supported
keywords = ['research', 'Artificial Intelligence',
            'AI', 'ML', 'uncertainty quantification']

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.6.4"
numpy = "^1.16.3"
regex = "2018.2.21"
scikit-learn = "^0.23.2"
pandas = "^1.1.0"
unidecode = "^1.0"
tqdm = "^4.37"
matplotlib = "^3.1"
seaborn = "^0.10.0"
xlrd = "^1.2.0"
spacy = "^2.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.6.0"
black = "19.3b0"
mock = "^2.0"
pdbpp = "^0.10.2"
ptpython = "^3.0"

[tool.black]
line-length = 120
target-version = ['py36']
skip-string-normalization = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

