[metadata]
name = SP-calibration-NER
author = contract.fit
author-email = jordy@contract.fit
summary = Contract.fit experimentation code
description-file = README.md
home-page = https://bitbucket.org/SP-calibration-NER
project_urls =
    Bug Tracker = https://bitbucket.org/SP-calibration-NER/issues
    Documentation = https://bitbucket.org/SP-calibration-NER/docs
    Source Code = https://bitbucket.org/SP-calibration-NER
classifier =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[files]
packages = SP-calibration-NER

[wheel]
universal = 1

[yapf]
based_on_style = google
column_limit = 100
indent_width = 4
spaces_before_comment = 2
blank_lines_around_top_level_definition = 2
coalesce_brackets = true
indent_dictionary_value = true
align_closing_bracket_with_visual_indent = false
allow_multiline_lambdas = true
allow_multiline_dictionary_keys = false
allow_split_before_dict_value = false
blank_line_before_nested_class_or_def = true
blank_line_before_class_docstring = false
split_arguments_when_comma_terminated = true
split_before_closing_bracket = true
split_before_first_argument = false

[flake8]
max-line-length = 120

[tool:pytest]
testpath = test
norecursedirs = models
rootdir="./tests"
python_files=test_*.py
addopts = -Wignore::DeprecationWarning -Wignore::PendingDeprecationWarning --tb=native

[pycodestyle]
max-line-length = 120
